--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -13,7 +13,6 @@ div [id]{
     font-family: "Kanit", sans-serif;
     font-style: normal;
 }
-
 /*barra de navegacion*/
 .navbar {
     background-color: rgb(240, 240, 240);
@@ -128,7 +127,6 @@ li h5 {
     box-sizing: border-box;
     padding: 20px 30px;
   }
-  
   .title {
     text-align: center;
   
@@ -136,7 +134,6 @@ li h5 {
     font-size: 28px;
     font-weight: 800;
   }
-  
   .form {
     width: 100%;
     display: flex;
@@ -144,15 +141,13 @@ li h5 {
     gap: 18px;
     margin-bottom: 15px;
   }
-  
   .input {
     border-radius: 20px;
     border: 1px solid #c0c0c0;
     outline: 0 !important;
     box-sizing: border-box;
     padding: 12px 15px;
-  }
-  
+  }  
   .page-link {
     text-decoration: underline;
     margin: 0;
@@ -160,18 +155,15 @@ li h5 {
     color: #747474;
     text-decoration-color: #747474;
   }
-  
   .page-link-label {
     cursor: pointer;
 
     font-size: 9px;
     font-weight: 700;
   }
-  
   .page-link-label:hover {
     color: #000;
   }
-  
   .form-btn {
     padding: 10px 15px;
 
@@ -183,18 +175,14 @@ li h5 {
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
-  
   .form-btn:active {
     box-shadow: none;
   }
-  
   .sign-up-label {
     margin: 0;
     font-size: 10px;
     color: #747474;
-
   }
-  
   .sign-up-link {
     margin-left: 1px;
     font-size: 11px;
@@ -203,9 +191,7 @@ li h5 {
     color: rgb(0, 0, 0);
     cursor: pointer;
     font-weight: 800;
-
   }
-  
   .buttons-container {
     width: 100%;
     display: flex;
@@ -214,7 +200,6 @@ li h5 {
     margin-top: 20px;
     gap: 15px;
   }
-  
   .apple-login-button,
       .google-login-button {
     border-radius: 20px;
@@ -229,17 +214,14 @@ li h5 {
     font-size: 11px;
     gap: 5px;
   }
-  
   .apple-login-button {
     background-color: #000;
     color: #fff;
     border: 2px solid #000;
   }
-  
   .google-login-button {
     border: 2px solid #747474;
-  }
-  
+  } 
   .apple-icon,
       .google-icon {
     font-size: 18px;
@@ -493,6 +475,7 @@ h3 {
 }
 
 /*carrusel*/
+
 .splide__track {
     border-radius: 5px;
 }
@@ -503,20 +486,36 @@ h3 {
 
 .card {
     height: 300px;
+    border: none;
+    border-radius: 3em;
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.3);
 }
 
 .card-header {
     height: 150px;
+        border: none;
+  background-color: #f5f5f5;
+
 }
 
 .card-header img {
     width: 100%;
     height: 100%;
     object-fit: contain;
+        border: none;
+  background-color: #f5f5f5;
+
 }
 
 .card-body {
     height: 50px;
+        border: none;
+  background-color: #f5f5f5;
+
+}
+.card-footer{
+  border: none;
+  background-color: #f5f5f5;
 }
 
 /*button comprar*/
