--- a/Assets/styles/catalogo.css
+++ b/Assets/styles/catalogo.css
@@ -442,7 +442,7 @@ footer p {
   border-radius: 10px;
   color: #fff;
   font-size: 16px;
-  transform: .3s ease;
+  transform: 0.3s ease;
 }
 
 .submit:hover {
