--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -19,7 +19,6 @@ div [id]{
     margin-bottom: 3px;
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
 }
-
 .btn-outline-success {
     margin-left: 5px;
     margin-right: 70px;
@@ -29,22 +28,18 @@ div [id]{
     width: 5em;
     box-shadow: 1px 1px 3px rgb(202, 202, 202);
 }
-
 .btn-outline-success:hover {
     background-color: rgb(156, 156, 156);
     border-color: rgb(156, 156, 156);
     box-shadow: 1px 1px 3px black;
     color: #000;
 }
-
-
 .btn:first-child:active {
     background-color: #f5f5f5;
     color: #000;
     border: 1px solid black;
     box-shadow: 2px 3px 2px black;
 }
-
 .btn-primary {
     background-color: rgb(0, 0, 0);
     border: none;
@@ -52,17 +47,13 @@ div [id]{
     margin-right: 40px;
     box-shadow: 1px 1px 3px rgb(202, 202, 202);
     border-radius: 20px;
-
 }
-
 .btn-primary:hover {
     background-color: rgb(227, 227, 227);
     border-color: rgb(230, 230, 230);
     box-shadow: 0px 1px 3px black;
     color: #000;
-
 }
-
 #iniciarCuenta {
     margin-left: 2em;
 }
@@ -238,7 +229,6 @@ li h5 {
     border-radius: 20px;
     position: relative;
   }
-  
   .title2 {
     font-size: 28px;
     color: rgb(0, 0, 0);
@@ -249,7 +239,6 @@ li h5 {
     align-items: center;
     padding-left: 30px;
   }
-  
   .title2::before,.title2::after {
     position: absolute;
     content: "";
@@ -258,48 +247,39 @@ li h5 {
     border-radius: 50%;
     left: 0px;
     background-color: rgb(0, 0, 0);
-  }
-  
+  } 
   .title2::before {
     width: 18px;
     height: 18px;
     background-color: rgb(0, 0, 0);
   }
-  
   .title2::after {
     width: 18px;
     height: 18px;
     animation: pulse 1s linear infinite;
   }
-  
   .message, .signin {
     text-align: center;
     color: rgba(88, 87, 87, 0.822);
     font-size: 14px;
   }
-  
   .signin {
     text-align: center;
   }
-  
   .signin a {
     color: rgb(0, 0, 0);
-  }
-  
+  } 
   .signin a:hover {
     text-decoration: underline rgb(0, 0, 0);
-  }
-  
+  } 
   .flex {
     display: flex;
     width: 100%;
     gap: 6px;
-  }
-  
+  } 
   .form label {
     position: relative;
-  }
-  
+  } 
   .form label .input {
     width: 100%;
     padding: 10px 10px 20px 10px;
@@ -307,7 +287,6 @@ li h5 {
     border: 1px solid rgba(105, 105, 105, 0.397);
     border-radius: 10px;
   }
-  
   .form label .input + span {
     position: absolute;
     left: 10px;
@@ -317,22 +296,18 @@ li h5 {
     cursor: text;
     transition: 0.3s ease;
   }
-  
   .form label .input:placeholder-shown + span {
     top: 15px;
     font-size: 0.9em;
-  }
-  
+  }  
   .form label .input:focus + span,.form label .input:valid + span {
     top: 30px;
     font-size: 0.7em;
     font-weight: 600;
   }
-  
   .form label .input:valid + span {
     color: green;
   }
-  
   .submit {
     border: none;
     outline: none;
@@ -341,28 +316,23 @@ li h5 {
     border-radius: 10px;
     color: #fff;
     font-size: 16px;
-    transform: .3s ease;
+    transform: 0.3s ease;
   }
-  
   .submit:hover {
     background-color: rgb(70, 70, 70);
   }
-  
   @keyframes pulse {
     from {
       transform: scale(0.9);
       opacity: 1;
     }
-  
     to {
       transform: scale(1.8);
       opacity: 0;
     }
   }
-
 /*div global*/
 .body-content {
-
     margin: 1em;
     height: 100%;
     width: auto;
@@ -495,10 +465,9 @@ h3 {
 }
 
 .card-header {
-    height: 150px;
-        border: none;
+  height: 150px;
+  border: none;
   background-color: #f5f5f5;
-
 }
 
 .card-header img {
@@ -520,7 +489,6 @@ h3 {
   border: none;
   background-color: #f5f5f5;
 }
-
 /*button comprar*/
 .button {
     cursor: pointer;
@@ -532,7 +500,6 @@ h3 {
     overflow: hidden;
     transition: 0.1s linear 0.1s;
 }
-
 .button span {
     color: rgb(255, 255, 255);
     font-weight: 500;
@@ -541,7 +508,6 @@ h3 {
     z-index: 2;
     transition: 0.2s linear 0.1s;
 }
-
 .button::after {
     display: block;
     content: "";
@@ -555,7 +521,6 @@ h3 {
     transition: 0.2s linear 0.1s;
     z-index: 1;
 }
-
 .button:hover {
     box-shadow: 0px 0px 20px rgb(255, 255, 255);
     border: 1px solid #000;
@@ -583,13 +548,10 @@ footer {
     bottom: 0;
     width: 100%
 }
-
 footer p {
     color: #fff;
     margin: 0;
 }
-
-
 /*carrito de compras*/
 .global{
     width: 100%;
@@ -615,14 +577,12 @@ footer p {
     margin-top: 3.5em;
 
 }
-
 @media (max-width: 768px) {
   .Banner {
       height: auto;
       min-height: 60vh;
       padding: 2em 1em;
     }
-
   .body-banner {
     background-size: contain;
     background-repeat: no-repeat;
@@ -650,7 +610,6 @@ footer p {
     flex-direction: column;
     height: auto;
   }
-
   .second-content-img {
     width: 100%;
     height: auto;
